# OOQ

./: CMakeLists.txt  README.md  _astylerc  config.h.in
data/: firsthint.txt  maps.txt  questions.txt
data/map/: interior_0.txt  poli.txt  room_0.txt
data/object/: pickup1.txt  pickup2.txt  pickup3.txt  pickup4.txt  pickup5.txt  test.txt  test2.txt
doc/: OOQ.uml
include/: game.h  input.h  manager.h  render.h  renderer.h  ui.h  utilities.h
src/: game.cpp  input.cpp  main.cpp  manager.cpp  render.cpp  renderer.cpp  ui.cpp  utilities.cpp
